#1987 - Fix PlaceOrder view on Iphone

--- a/src/styles/partials/dashboard.scss
+++ b/src/styles/partials/dashboard.scss
@@ -466,7 +466,42 @@
   }
 }
 
+.support-form-holder, .legacy-form-holder {
+  z-index: 999;
+  position: fixed;
+  top: 0;
+  right:0;
+  width: 100%;
+  height: 100%;
+
+  .form-header{
+    padding:1rem;
+    position: relative;
+    border-bottom:1px $smoke solid;
+    background: $white;
+    top:-1px;
+    z-index: 99;
+    h2{
+      font-size: 1.4rem;
+      margin: 0;
+      font-weight: 700;
+    }
+    .btn-close {
+      font-size: 18px;
+      position: absolute;
+      right: 16px;
+      top: 1px;
+      color:$brand-dark;
+      &:hover{
+        color:$brand-dark;
+      }
+    }
+  }
+}
+
 .support-form-holder{
+  display: none;
+
   &.loading{
     &:after{
       content: '';
@@ -475,7 +510,7 @@
       color:#fff;
       position: absolute;
       z-index: 9999;
-     text-align: center;
+      text-align: center;
       width: 100%;
       vertical-align: middle;
       left: 0;
@@ -515,13 +550,7 @@
       }
     }
   }
-  z-index: 999;
-  display: none;
-  position: fixed;
-  top: 0;
-  right:0;
-  width: 100%;
-  height: 100%;
+
   max-width: 430px;
   background: $white;
   border: 1px solid $gainsboro;
@@ -564,29 +593,6 @@
 
       &#description-error {
         margin-left: 9px;
-      }
-    }
-  }
-  .form-header{
-    padding:1rem;
-    position: relative;
-    border-bottom:1px $smoke solid;
-    background: $white;
-    top:-1px;
-    z-index: 99;
-    h2{
-      font-size: 1.4rem;
-      margin: 0;
-      font-weight: 700;
-    }
-    #btn-close {
-      font-size: 18px;
-      position: absolute;
-      right: 16px;
-      top: 1px;
-      color:$brand-dark;
-      &:hover{
-        color:$brand-dark;
       }
     }
   }
@@ -903,16 +909,56 @@
   }
 
 }
-#legacy-info{
-  #header{
-    display: none;
+
+.legacy-form-holder {
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.29);
+  -moz-box-shadow: 0 0 20px rgba(0, 0, 0, 0.29);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.29);
+
+  .pop-overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: rgba(0,0,0,0.3);
   }
-  border:none;
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  overflow:auto;
+
+  .pop-content {
+    width: 80%;
+    height: 100%;
+    position: relative;
+    background: #fff;
+    float: right;
+
+    .form-header + div.expanded {
+      padding: 15px 10px;
+    }
+
+    .pop-heading {
+      float: left;
+      font-size: 1.8rem;
+      font-weight: 500;
+    }
+  }
+
+  .iframe-wrapper {
+    position: relative;
+    -webkit-overflow-scrolling: touch;
+    overflow: auto;
+
+    #legacy-info{
+      #header{
+        display: none;
+      }
+
+      border:none;
+      position: absolute;
+      width: calc(100% - 20px);
+      height: 100%;
+    }
+  }
 }
+
+
 .powered-by{
   max-width: 200px;
   margin: 3rem auto 0;
@@ -1223,5 +1269,13 @@
 @media print, screen and (max-width: 377px) {
   .spent-info {
     top: 158px;
+  }
+}
+
+@media print, screen and (max-width: 425px) {
+  .legacy-form-holder {
+    .pop-content {
+      width: 100%;
+    }
   }
 }
